--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -410,32 +410,32 @@
 </details></li>
 </ol>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the rate per-kilometre is <strong>not</strong> considered reasonable (either lower or higher), the benefit is taxable.</p> 
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a></p></li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the rate per-kilometre is considered reasonable, the benefit may not be taxable.</p>
-<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step6">Step 6 - Determine if the benefit is taxable</a></p></li>
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the per-kilometre rate is <strong>not</strong> considered reasonable (either too low or too high), the allowance or reimbursement is taxable.</p> 
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a>.</p></li>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the per-kilometre rate is considered reasonable, the allowance or reimbursement may not be taxable.</p>
+<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step6">Step 6 - Determine if the benefit is taxable</a>.</p></li>
 </ul>
 
 </li>
 
 <li><h3 id="step6">Determine if the benefit is taxable</h3>
-<p class="mrgn-bttm-lg">Depending on your situation, there may not be a taxable benefit for certain amounts you pay to your employees for the use of a vehicle they own and use in the course of their employment duties under the Income Tax Act or the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
+<p class="mrgn-bttm-lg">Depending on your situation, the amounts you pay to your employees for the use of a vehicle they own and use in the course of their employment duties may not be taxable under the Income Tax Act or the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
 
 <h3>Situations</h3>
 
 <details><summary>Situation: You provide an <strong>allowance</strong> to your employee </summary>
 <h4>Non-taxable situation</h4>
-<p>If you paid an allowance to your employee to compensate for using their own vehicle, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
+<p>If you paid an allowance to your employee to compensate for using their own vehicle, the allowance is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">The allowance is calculated <strong>only</strong> on the actual number of kilometres for <a href="#business" aria-controls="centred-popup" class="wb-lbx" role="button">business driving&nbsp;<span class="far fa-question-circle"></span>,</a> (in the course of their employment duties) (step 1)</li>
-<li class="cnjnctn-col">The <a href="#rates" aria-controls="centred-popup" class="wb-lbx" role="button">reasonable rate per-kilometre&nbsp;<span class="far fa-question-circle"></span></a> is used to calculate (if the rate is <a href="#rates2" aria-controls="centred-popup" class="wb-lbx" role="button">lower or higher&nbsp;<span class="far fa-question-circle"></span></a>, you must be able to justify your position) (step 4)</li>
-<li class="cnjnctn-col">If you reimburse your employee for other expenses related to the same use of the vehicle, the reimbursement is <strong>only</strong> for supplementary business insurance, or tolls and ferry charges <strong>not paid</strong> as part of the allowance </li>
+<li class="cnjnctn-col">The allowance is based <strong>only</strong> on the actual number of kilometres for <a href="#business" aria-controls="centred-popup" class="wb-lbx" role="button">business driving&nbsp;<span class="far fa-question-circle"></span>,</a> (in the course of their employment duties) (step 1)</li>
+<li class="cnjnctn-col">The <a href="#rates" aria-controls="centred-popup" class="wb-lbx" role="button">per-kilometre rate&nbsp;<span class="far fa-question-circle"></span></a> is reasonable (step 4)</li>
+<li class="cnjnctn-col">You did not reimburse your employee for expenses related to the same use of the vehicle (does not apply to situations where you reimburse your employee for supplementary business insurance, or tolls and ferry charges, if you determined the allowance without including these reimbursements) </li>
 </ul>
 
 <h4>Taxable situation</h4>
-<p>If the allowance provided to your employee for automobile or motor vehicle expenses <strong>does not </strong>meet all of the conditions above, the benefit is taxable.</p>
+<p>If the allowance provided to your employee for automobile or motor vehicle expenses <strong>does not </strong>meet all of the conditions above, the allowance is taxable.</p>
 
-<p>For example, the benefit is taxable in <strong>all</strong> of the following situations:</p>
+<p>For example, the allowance is taxable in <strong>all</strong> of the following situations:</p>
 
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col">Allowances paid at per-kilometre rates that are not considered reasonable because they are either too high or too low </li>
@@ -444,12 +444,12 @@
 <li class="cnjnctn-col">Allowances received where your employee is also reimbursed for the same use of the vehicle (except where the reimbursement is in respect of supplementary business insurance or toll or ferry charges and the amount of the allowance was determined without reference to the reimbursed expenses for supplementary business insurance or toll or ferry charges)</li>
 </ul>
 
-<details><summary>Examples of allowances that are partly-taxable or taxable</summary>
+<details><summary>Examples of allowances that are taxable</summary>
 
     <div class="table-responsive">
       <table class="table table-striped small table-condensed">
         <caption class="wb-inv">
-       Examples of allowances that are partly-taxable or taxable
+       Examples of allowances that are taxable
         </caption>
 
 
@@ -468,9 +468,9 @@
 	<td><p>You own an office supply company where you employ workers on the road as salespersons. Each salesperson has a specific territory to cover and they use their own vehicle. They are paid a monthly flat rate allowance of $600 no matter where they go or how far they drive. This was agreed on when they were hired and is cited in their respective employment contracts.</p>
 
 </td>
-	<td><p>The benefit is taxable to your employee because:</p>
+	<td><p>The allowance is taxable to your employee because:</p>
 <ul class="fa-ul">
-<li><span class="fas fa-check fa-lg fa-li text-success"></span> The flat rate allowance is not considered reasonable because it is not based on the number of business kilometres driven</li>
+<li><span class="fas fa-check fa-lg fa-li text-success"></span> The flat rate allowance is not based on the number of business kilometres driven.</li>
 
 </ul> </td>
 </tr>
@@ -478,7 +478,7 @@
 	<td><p>You pay an allowance to your employee as a flat per-diem rate to offset your employee's fixed expenses for each day the vehicle is required. You also pay a reasonable per-kilometre rate for each kilometre driven to offset the operating expenses.</p>
 
 </td>
-	<td><p>The benefit is taxable to your employee because:</p>
+	<td><p>The total combined allowance is taxable to your employee because:</p>
 <ul class="fa-ul">
 <li><span class="fas fa-check fa-lg fa-li text-success"></span> The flat per-diem rate compensates your employee for some of the same use on which the reasonable per-kilometre allowance is based. That is, the fixed expenses incurred by your employee to operate the vehicle.</li>
 <li><span class="fas fa-check fa-lg fa-li text-success"></span> The combined amount is considered <strong>one </strong>allowance and it is <strong>not </strong>based <strong>only </strong>on the number of kilometres the vehicle is used for employment purposes.</li>
@@ -491,9 +491,9 @@
 	<td><p>You pay an allowance to your employee as a flat-rate per month for travel inside the employment district. You also pay a reasonable per-kilometre rate for employment-related travel outside the employment district.</p>
 
 </td>
-	<td><p>The benefit is <strong>partly</strong> taxable to your employee because:</p>
+	<td><p>The allowances are considered <strong>separetely</strong> and are taxable to your employee because:</p>
 <ul class="fa-ul">
-<li><span class="fas fa-check fa-lg fa-li text-success"></span> The flat-rate allowance does not cover any of the same use of the vehicle on which the reasonable per-kilometre allowance is based, the allowances are considered separately.</li>
+<li><span class="fas fa-check fa-lg fa-li text-success"></span> The flat-rate allowance does not cover any of the same use of the vehicle on which the reasonable per-kilometer is based.</li>
 <li><span class="fas fa-check fa-lg fa-li text-success"></span> The reasonable per-kilometre allowance paid for travel outside the district is <strong>not taxable</strong>.</li>
 <li><span class="fas fa-check fa-lg fa-li text-success"></span>The amount based on a flat-rate paid for travel inside the district is <strong>taxable</strong>, since it is <strong>not </strong>based only on the number of kilometres for which the vehicle is used in connection with the employment.</li>
 
