--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -322,14 +322,18 @@
 
 
 <li><h3 id="step3">Get the required records from your employee to confirm the total number of kilometres travelled for business driving</h3>
-<p>Your employee should keep records of the total number of kilometres travelled for business driving made with their own vehicle. For example:</p>
- <div id="ajax-log">
-<ul  class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li fa-lg text-success"></span> A log of the total number of kilometres driven all year as part of their employment duties</li>
-<li><span class="fas fa-check fa-li fa-lg text-success"></span> A log of each work trip taken that includes the date, destination and purpose of the trip</li>
-</ul>
+
+<p>If you provide a reimbursement or allowances to your employee to compensate them for expenses paid for the use of their own automobile or motor vehicle in the course of their employment duties, they should keep records of the total number of kilometres travelled for business driving made with their own vehicle. </p>
 
 <p class="mrgn-tp-md">You <strong>must get records from your employee</strong>, such as expense claims or a copy of the records mentioned above, to justify that the allowance, advance or reimbursement that you paid was based only on the number of kilometres for business driving. </p>
+
+<p>Your employee should record the following information in their records:</p>
+ <div id="ajax-log">
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col">A log of all kilometres driven all year as part of their employment duties</li>
+<li class="cnjnctn-col">A log of each work trip taken that includes the date, destination and purpose of the trip</li>
+</ul>
+
 <p>If you <strong>cannot</strong> get the required records, you must use reasonable estimates to determine the amount of business and personal driving for the year based on the facts of the situation.</p>
 </div>
 <hr>
