--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1820,7 +1820,7 @@ estimated by the number of pay periods in the year. </p>
 </li>
 
 <li><h3 id="step12">Determine if your employee is eligible for the optional operating expenses benefit calculation</h3>
-<p id="calcoper1">You can use the optional calculation for the operating expenses if <strong>all</strong> of the following apply:</p>
+<p id="calcoper1">You can use the optional calculation for the operating expenses benefit if <strong>all</strong> of the following apply:</p>
 
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col"> You include a standby charge in your employee’s income</li>
@@ -1830,10 +1830,10 @@ estimated by the number of pay periods in the year. </p>
 
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If your employee <strong>does not</strong> meet all conditions, <strong>do not</strong> use the optional operating expenses calculation. You must used the <strong>fixed rate</strong> operating expenses calculation.</p>
+			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If your employee <strong>does not</strong> meet all conditions, <strong>do not</strong> use the optional operating expenses benefit calculation. You must used the <strong>fixed rate</strong> operating expenses benefit calculation.</p>
 
 </li>
-                         <li class="cnjnctn-col"><p> <span class="fas fa-check fa-lg text-success"></span> If your employee meets <strong>all</strong> conditions, you have the option to calculate using the <strong>optional</strong> operating expenses calculation.</p></li>
+                         <li class="cnjnctn-col"><p> <span class="fas fa-check fa-lg text-success"></span> If your employee meets <strong>all</strong> conditions, you have the option to calculate using the <strong>optional</strong> operating expenses benefit calculation.</p></li>
                           </ul>
 </li>
 
