--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -323,7 +323,7 @@
 
 <li><h3 id="step3">Get the required records from your employee to confirm the total number of kilometres travelled for business driving</h3>
 
-<p>If you provide a reimbursement or allowances to your employee to compensate them for expenses paid for the use of their own automobile or motor vehicle in the course of their employment duties, they should keep records of the total number of kilometres travelled for business driving made with their own vehicle. </p>
+<p>If you provide a reimbursement or allowances to your employee to compensate them for expenses paid for the use of their own automobile or motor vehicle in the course of their employment duties, your employee should keep records of the total number of kilometres travelled for business driving made with their own vehicle. </p>
 
 <p class="mrgn-tp-md">You <strong>must get records from your employee</strong>, such as expense claims or a copy of the records mentioned above, to justify that the allowance, advance or reimbursement that you paid was based only on the number of kilometres for business driving. </p>
 
@@ -338,7 +338,7 @@
 </div>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you do <strong>not receive</strong> the required records and <strong>base the calculation</strong> of your allowance, advance or reimbursement on them, the allowance or reimbursement is taxable because it <strong>does not meet the requirements of the Income Tax Act</strong> for the benefit to be only based on business kilometres driven.</p> 
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you do <strong>not receive</strong> the required records the allowance, advance or reimbursement is taxable because it <strong>does not meet the requirements of the Income Tax Act</strong> for the benefit to be only based on business kilometres driven.</p> 
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a>.</p></li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If your employee kept the required detailed records and you received a copy, the allowance, advance or reimbursement may not be taxable.</p>
 <p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step4">Step 4 - Determine if special considerations apply to the benefit</a>.</p></li>
