--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -361,7 +361,7 @@
 </li>
 
 <li><h3 id="step5">Determine if the rate per-kilometre is considered reasonable</h3>
-<p>Generally, the CRA allows you to use the per-kilometre rates prescribed in section 7306 of the Income Tax Regulations (maximum amount deductible as a business expense) to determine if the rate used for amounts paid to your employee is reasonable (step 5a). </p>
+<p>Generally, the CRA consideres an allowance based on the per-kilometre rates prescribed in section 7306 of the Income Tax Regulations (maximum amount deductible as a business expense) to be reasonable (step 5a). </p>
 <p>In exceptional situations, a rate other than the prescribed rate may be considered reasonable (step 5b).</p>
 <details><summary>Example of per-kilometre rates not considered reasonable</summary>
 
