--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -327,13 +327,14 @@
 
 <p class="mrgn-tp-md">You <strong>must get records from your employee</strong>, such as expense claims or a copy of the records mentioned above, to justify that the allowance, advance or reimbursement that you paid was based solely on the number of kilometres for business driving. </p>
 
+<details><summary><span class="fas fa-folder-open fa-lg"></span> Logbook - Required records</summary>
 <p>Your employee should record the following information in their records:</p>
  <div id="ajax-log">
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">A log of all kilometres driven all year as part of their employment duties</li>
 <li class="cnjnctn-col">A log of each work trip taken that includes the date, destination and purpose of the trip</li>
 </ul>
-
+</details>
 <p>If you <strong>cannot</strong> get the required records, you must use reasonable estimates to determine the amount of business and personal driving for the year based on the facts of the situation.</p>
 </div>
 <hr>
