--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -335,13 +335,13 @@
 <li class="cnjnctn-col">A log of each work trip taken that includes the date, destination and purpose of the trip</li>
 </ul>
 </details>
-<p>If you <strong>cannot</strong> get the required records, you must use reasonable estimates to determine the amount of business and personal driving for the year based on the facts of the situation.</p>
 </div>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you do <strong>not receive</strong> the required records the allowance, advance or reimbursement is taxable because it <strong>does not meet the requirements of the Income Tax Act</strong> for the benefit to be solely based on business kilometres driven.</p> 
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If <strong>no record</strong> is kept, the allowance, advance or reimbursement is taxable. You must use reasonable estimates to determine the amount of business and personal driving for the year based on the facts of the situation.</p>
+
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a>.</p></li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If your employee kept the required detailed records and you received a copy, the allowance, advance or reimbursement may not be taxable.</p>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If your employee kept the <strong>required records</strong> and you received a copy, the allowance, advance or reimbursement may not be taxable.</p>
 <p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step4">Step 4 - Determine if special considerations apply to the benefit</a>.</p></li>
 </ul>
 </li>
