--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -303,14 +303,14 @@
 </li>
 
 <li><h3 id="step2">Determine if there was business driving of the automobile </h3>
-
+<div id="ajax-business">
 <p>Business driving is <strong>any driving</strong> done by an employee between work locations for purposes related to their employment duties. This includes regular places of employment and a point of call.</p>
 <p>Personal driving is any driving by an employee of a vehicle for purposes not related to their employment. </p>
   
 <div data-ajax-replace="ajax/personal-vehicle.txt #ajax-regular"></div>
 <div data-ajax-replace="ajax/personal-vehicle.txt #ajax-pointcall"></div>
 <div data-ajax-replace="ajax/personal-vehicle.txt #ajax-driving"></div>
- 
+ </div>
 <hr>	
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If there is <strong>no business driving</strong>, the allowance, advance or reimbursement paid to your employee is taxable. </p>
