--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -295,9 +295,9 @@
 <p id="require">You need to determine if your employee was required to use their own automobile or motor vehicle in the course of their employment duties.</p>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> require your employee to use their own vehicle in the course of their employment duties, the allowance, advance or reimbursement paid to your employee is <strong>taxable</strong>. </p>
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> require your employee to use their own vehicle in the course of their employment duties, the allowance or reimbursement paid to your employee is <strong>taxable</strong>. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a>.</p>  </li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to use their own vehicle in the course of their employment duties, the allowance, advance or reimbursement paid to your employee may not be taxable if they meet <strong>all conditions</strong>. </p>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to use their own vehicle in the course of their employment duties, the allowance or reimbursement paid to your employee may not be taxable if they meet <strong>all conditions</strong>. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step2">Step 2 - Determine if there was business driving of the automobile</a>.</p></li>
 </ul>
 </li>
@@ -313,9 +313,9 @@
  </div>
 <hr>	
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If there is <strong>no business driving</strong>, the allowance, advance or reimbursement paid to your employee is taxable. </p>
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If there is <strong>no business driving</strong>, the allowance or reimbursement paid to your employee is taxable. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a>.</p></li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If there is business driving, the allowance, advance or reimbursement paid to your employee may not be taxable. </p>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If there is business driving, the allowance or reimbursement paid to your employee may not be taxable. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span>  Continue to: <a href="#step3">Step 3 - Get the required records from your employee to confirm the total number of kilometres travelled for business driving</a>.</p> </li>
 </ul>
 </li>
@@ -325,7 +325,7 @@
 
 <p>If you provide a reimbursement or allowances to your employee to compensate them for expenses paid for the use of their own automobile or motor vehicle in the course of their employment duties, your employee should keep records of the total number of kilometres travelled for business driving made with their own vehicle. </p>
 
-<p class="mrgn-tp-md">You <strong>must get records from your employee</strong>, such as expense claims or a copy of the records mentioned above, to justify that the allowance, advance or reimbursement that you paid was based solely on the number of kilometres for business driving. </p>
+<p class="mrgn-tp-md">You <strong>must get records from your employee</strong>, such as expense claims or a copy of the records mentioned above, to justify that the allowance or reimbursement that you paid was based solely on the number of kilometres for business driving. </p>
 
 <details><summary><span class="fas fa-folder-open fa-lg"></span> Logbook - Required records</summary>
 <p>Your employee should record the following information in their records:</p>
@@ -338,10 +338,10 @@
 </details>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If <strong>no record</strong> is kept, the allowance, advance or reimbursement is taxable. You must use reasonable estimates to determine the amount of business and personal driving for the year based on the facts of the situation.</p>
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If <strong>no record</strong> is kept, the allowance or reimbursement is taxable. You must use reasonable estimates to determine the amount of business and personal driving for the year based on the facts of the situation.</p>
 
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a>.</p></li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If your employee kept the <strong>required records</strong> and you received a copy, the allowance, advance or reimbursement may not be taxable.</p>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If your employee kept the <strong>required records</strong> and you received a copy, the allowance or reimbursement may not be taxable.</p>
 <p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step4">Step 4 - Determine if special considerations apply to the benefit</a>.</p></li>
 </ul>
 </li>
