--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -356,7 +356,7 @@
 <hr>	
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"> </span> If the use of the vehicle is in <strong>one</strong> of the above special situations, <strong>do not</strong> continue to next step.  </li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the use of the vehicle is <strong>not</strong> in one of the above special situations, the benefit paid for the use of their vehicle in the course of their employment duties may be taxable.</p> 
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the use of the vehicle is <strong>not</strong> in one of the above special situations, the allowance or reimbursement may be taxable.</p> 
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step5">Step 5 - Determine if the rate per-kilometre is considered reasonable</a>.</p></li>
 </ul>
 </li>
