--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -342,11 +342,11 @@
 
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Calculate the value of the benefit to be included on the T4 slip</a>.</p></li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If your employee kept the <strong>required records</strong> and you received a copy, the allowance or reimbursement may not be taxable.</p>
-<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step4">Step 4 - Determine if special considerations apply to the benefit</a>.</p></li>
+<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step4">Step 4 - Determine if any exceptions apply to the benefit</a>.</p></li>
 </ul>
 </li>
 
-<li><h3 id="step4">Determine if any exceptions apply to the automobile benefit</h3>
+<li><h3 id="step4">Determine if any exceptions apply to the benefit</h3>
 <p>An allowance or reimbursement paid to your employee for the use of their vehicle may not be taxable in <strong>one</strong> of the following special situations:</p>
 
 <ul class="list-unstyled cnjnctn-type-or">
