--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -440,9 +440,9 @@
 <h4>Taxable situation</h4>
 <p>If the allowance provided to your employee for automobile or motor vehicle expenses <strong>does not </strong>meet all of the conditions above, the allowance is taxable.</p>
 
-<p>For example, the allowance is taxable in <strong>all</strong> of the following situations:</p>
+<p>For example, allowances are taxable in <strong>all</strong> of the following situations:</p>
 
-<ul class="list-unstyled cnjnctn-type-or">
+<ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Allowances paid at per-kilometre rates that are not considered reasonable because they are either too high or too low </li>
 <li class="cnjnctn-col">Flat-rate allowances paid to employees where the amount paid is <strong>not </strong>related to the number of kilometres driven </li>
 <li class="cnjnctn-col">Allowances that <strong>combine </strong>flat-rate and reasonable per-kilometre allowances for the same use of the vehicle </li>
@@ -500,7 +500,7 @@
 <ul class="fa-ul">
 <li><span class="fas fa-check fa-lg fa-li text-success"></span> The flat-rate allowance does not cover any of the same use of the vehicle on which the reasonable per-kilometer is based.</li>
 <li><span class="fas fa-check fa-lg fa-li text-success"></span> The reasonable per-kilometre allowance paid for travel outside the district is <strong>not taxable</strong>.</li>
-<li><span class="fas fa-check fa-lg fa-li text-success"></span>The amount based on a flat-rate paid for travel inside the district is <strong>taxable</strong>, since it is <strong>not </strong>based only on the number of kilometres for which the vehicle is used in connection with the employment.</li>
+<li><span class="fas fa-check fa-lg fa-li text-success"></span>The amount based on a flat-rate paid for travel inside the district is <strong>taxable</strong>, since it is <strong>not </strong>based solely on the number of kilometres for which the vehicle is used in connection with the employment.</li>
 
 </ul> </td>
 </tr>
