--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -669,7 +669,7 @@
 <p>You allow your employees to use their personal motor vehicle for business and pay them a monthly motor vehicle allowance to pay for the operating expenses and you include the allowance in your employees' employment income as a taxable benefit.</p>
 </details>
 
-<p>Learn more:</p>
+<p>Learn more on allowable employment expenses:</p>
 <ul>
 <li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-22900-other-employment-expenses/salaried-employees/allowable-motor-vehicle-expenses.html">Allowable motor vehicle expenses – Salaried employee expenses</a></li>
 <li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-22900-other-employment-expenses/commission-employees/allowable-motor-vehicle-expenses.html">Allowable motor vehicle expenses – Commission employee expenses</a></li>
