--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -271,7 +271,11 @@
 </nav>
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Automobile or motor vehicle benefits – Allowances or reimbursements provided to an employee for the use of their own vehicle</h1>
-                 
+  <p class="small mrgn-bttm-sm"><strong>You may be looking for:</strong></p>
+                  <ul class="small mrgn-tp-sm">
+                     <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/small-businesses-self-employed-income/business-income-tax-reporting/business-expenses/motor-vehicle-expenses.html">Motor vehicle expenses claimed by self-employed individuals</a></li>
+		  
+                  </ul>               
  <div class="alert alert-info">
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the current CRA administrative policy. </strong></p>
 
@@ -626,15 +630,6 @@
 </tbody> </table></div>
 </details>
 
-</details>
-
-<details><summary>Situation: <strong>Self-employed</strong> individual or an individual who is a member of a <strong>partnership</strong> owns or leases a motor vehicle</summary>
-<p> The information on this webpage <strong>does not</strong> apply to a self-employed individual or an individual who is a member of a partnership who personally owns or leases a motor vehicle to earn income from the business. </p>
-<p>Learn more:</p>
-<ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/it521r.html">IT521R &ndash; Motor Vehicle Expenses Claimed by Self-Employed Individuals</a> </li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4002.html">Business and Professional Income (T4002)</a> </li>
-</ul>
 </details>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
