--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -361,11 +361,59 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"> </span> If the use of the vehicle is in <strong>one</strong> of the above special situations, <strong>do not</strong> continue to next step.  </li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the use of the vehicle is <strong>not</strong> in one of the above special situations, the allowance or reimbursement may be taxable.</p> 
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step5">Step 5 - Determine if the rate per-kilometre is considered reasonable</a>.</p></li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step5">Step 5 - Determine if the benefit is taxable based on the type of payment you made to your employee</a>.</p></li>
 </ul>
 </li>
 
-<li><h3 id="step5">Determine if the rate per-kilometre is considered reasonable</h3>
+<li><h3 id="step5">Determine if the benefit is taxable based on the type of payment you made to your employee</h3>
+<p class="mrgn-bttm-lg">Depending on your situation, the amounts you pay to your employees for the use of a vehicle they own and use in the course of their employment duties may not be taxable under the Income Tax Act or the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
+
+<details><summary>Situation: You <strong>reimburse</strong> your employee</summary>
+<h4>Non-taxable situation</h4>
+<p>If you reimburse your employee to compensate for using their own vehicle, the benefit is <strong>not</strong> taxable if <strong>all</strong> of the following apply:</p>
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">The reimbursement is <strong>only</strong> for the use of your employee's vehicle for the <a href="#business" aria-controls="centred-popup" class="wb-lbx" role="button">business kilometres driven&nbsp;<span class="far fa-question-circle"></span>,</a> (in the course of their employment duties) (step 1)</li>
+<li class="cnjnctn-col">You received a copy of the required records to confirm the amounts reimbursed (step 2)</li>
+<li class="cnjnctn-col">You can justify your position regarding the amount you reimburse being reasonable (step 3)</li>
+</ul>
+
+<h4>Taxable situation</h4>
+<p>If the reimbursement you provide to your employee for automobile or motor vehicle expenses <strong>does not</strong> meet all of the conditions above, the benefit is taxable.</p>
+
+<details><summary>Example of a reimbursement that is taxable</summary>
+<p>An employee uses their vehicle approximately 5 times per month to do deliveries for their employer. In exchange for this service, the employer provides the employee with a company credit card to pay for gas for their automobile. </p>
+<p>Based on gas, insurance and wear and tear, the employee estimates that the cost of using their automobile for work totals $250 per year. You have confirmed that this estimate is reasonable given the amount of business kilometres driven in the year. The company's credit card statements show that the employee spent $1,500 in gas and insurance in the year. </p>
+
+ <ul class="fa-ul lst-spcd mrgn-bttm-md mrgn-lft-lg">
+                                    <li><span class="fa-stack text-success">
+                                       <span class="far fa-circle fa-stack-2x"></span>
+                                       <span class="fas fa-dollar-sign fa-stack-1x"></span>
+                                       </span> <span class="mrgn-tp-0 text-muted h5">$1,500 is value in gas and insurance in the year</span> 
+                                    </li>
+
+ 				<li class="brdr-bttm">
+                                       <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
+                                       <span class="far fa-circle fa-stack-2x"></span>
+                                       <span class="fas fa-dollar-sign fa-stack-1x"></span>
+                                       </span>  <span class="mrgn-tp-0 text-muted h5">$250 is the reasonable cost of using their automobile for work</span>
+                                       <div class="mrgn-tp-md"></div>
+                                    </li>
+
+                     	 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
+                                       <span class="fas fa-circle fa-stack-2x"></span>
+                                       <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
+                                       </span> <span class="mrgn-tp-0 text-muted h5">$1,250 is the value of the benefit <strong>to be included on the T4 slip</strong>
+                                       </span></span> 
+                                    </li>
+		
+                  </ul>
+</details>
+
+</details>
+<p>Modify structure here to continue with the requirements for the allowance</p>	
+</li>
+
+<li><h3 id="step6">Determine if the rate per-kilometre is considered reasonable</h3>
 <p>Generally, the CRA consideres an allowance based on the per-kilometre rates prescribed in section 7306 of the Income Tax Regulations (maximum amount deductible as a business expense) to be reasonable (step 5a). </p>
 <p>In exceptional situations, a rate other than the prescribed rate may be considered reasonable (step 5b).</p>
 <details><summary>Example of per-kilometre rates not considered reasonable</summary>
@@ -428,8 +476,7 @@
 </li>
 
 <li><h3 id="step6">Determine if the benefit is taxable</h3>
-<p class="mrgn-bttm-lg">Depending on your situation, the amounts you pay to your employees for the use of a vehicle they own and use in the course of their employment duties may not be taxable under the Income Tax Act or the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
-
+<p>This will be moved to accommodate the updated structure</p>
 <h3>Situations</h3>
 
 <details><summary>Situation: You provide an <strong>allowance</strong> to your employee </summary>
@@ -510,49 +557,6 @@
 </tr>
 
 </tbody> </table></div>
-</details>
-
-</details>
-
-<details><summary>Situation: You <strong>reimburse</strong> your employee</summary>
-<h4>Non-taxable situation</h4>
-<p>If you reimburse your employee to compensate for using their own vehicle, the benefit is <strong>not</strong> taxable if <strong>all</strong> of the following apply:</p>
-<ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">The reimbursement is <strong>only</strong> for the use of your employee's vehicle for the <a href="#business" aria-controls="centred-popup" class="wb-lbx" role="button">business kilometres driven&nbsp;<span class="far fa-question-circle"></span>,</a> (in the course of their employment duties) (step 1)</li>
-<li class="cnjnctn-col">You received a copy of the required records to confirm the amounts reimbursed (step 2)</li>
-<li class="cnjnctn-col">You can justify your position regarding the amount you reimburse being reasonable (step 3)</li>
-</ul>
-
-<h4>Taxable situation</h4>
-<p>If the reimbursement you provide to your employee for automobile or motor vehicle expenses <strong>does not</strong> meet all of the conditions above, the benefit is taxable.</p>
-
-<details><summary>Example of a reimbursement that is taxable</summary>
-<p>An employee uses their vehicle approximately 5 times per month to do deliveries for their employer. In exchange for this service, the employer provides the employee with a company credit card to pay for gas for their automobile. </p>
-<p>Based on gas, insurance and wear and tear, the employee estimates that the cost of using their automobile for work totals $250 per year. You have confirmed that this estimate is reasonable given the amount of business kilometres driven in the year. The company's credit card statements show that the employee spent $1,500 in gas and insurance in the year. </p>
-
- <ul class="fa-ul lst-spcd mrgn-bttm-md mrgn-lft-lg">
-                                    <li><span class="fa-stack text-success">
-                                       <span class="far fa-circle fa-stack-2x"></span>
-                                       <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                       </span> <span class="mrgn-tp-0 text-muted h5">$1,500 is value in gas and insurance in the year</span> 
-                                    </li>
-
- 				<li class="brdr-bttm">
-                                       <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
-                                       <span class="far fa-circle fa-stack-2x"></span>
-                                       <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                       </span>  <span class="mrgn-tp-0 text-muted h5">$250 is the reasonable cost of using their automobile for work</span>
-                                       <div class="mrgn-tp-md"></div>
-                                    </li>
-
-                     	 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
-                                       <span class="fas fa-circle fa-stack-2x"></span>
-                                       <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                       </span> <span class="mrgn-tp-0 text-muted h5">$1,250 is the value of the benefit <strong>to be included on the T4 slip</strong>
-                                       </span></span> 
-                                    </li>
-		
-                  </ul>
 </details>
 
 </details>
