--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -328,18 +328,17 @@
 <li><h3 id="step3">Get the required records from your employee to confirm the total number of kilometres travelled for business driving</h3>
 
 <p>If you provide a reimbursement or allowances to your employee to compensate them for expenses paid for the use of their own automobile or motor vehicle in the course of their employment duties, your employee should keep records of the total number of kilometres travelled for business driving made with their own vehicle. </p>
-
-<p class="mrgn-tp-md">You <strong>must get records from your employee</strong>, such as expense claims or a copy of the records mentioned above, to justify that the allowance or reimbursement that you paid was based solely on the number of kilometres for business driving. </p>
+<div id="ajax-log">
+<p class="mrgn-tp-md">You <strong>must get records from your employee</strong>, such as expense claims or a copy of the records mentioned above, to justify that the reimbursement or the allowance that you paid was based solely on the number of kilometres for business driving. </p>
 
 <details><summary><span class="fas fa-folder-open fa-lg"></span> Logbook - Required records</summary>
 <p>Your employee should record the following information in their records:</p>
- <div id="ajax-log">
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+ <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">A log of all kilometres driven all year as part of their employment duties</li>
 <li class="cnjnctn-col">A log of each work trip taken that includes the date, destination and purpose of the trip</li>
 </ul>
-</div>
 </details>
+</div>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If <strong>no record</strong> is kept, the allowance or reimbursement is taxable. You must use reasonable estimates to determine the amount of business and personal driving for the year based on the facts of the situation.</p>
@@ -372,9 +371,9 @@
 <h4>Non-taxable situation</h4>
 <p>If you reimburse your employee to compensate for using their own vehicle, the benefit is <strong>not</strong> taxable if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">The reimbursement is <strong>only</strong> for the use of your employee's vehicle for the <a href="#business" aria-controls="centred-popup" class="wb-lbx" role="button">business kilometres driven&nbsp;<span class="far fa-question-circle"></span>,</a> (in the course of their employment duties) (step 1)</li>
-<li class="cnjnctn-col">You received a copy of the required records to confirm the amounts reimbursed (step 2)</li>
-<li class="cnjnctn-col">You can justify your position regarding the amount you reimburse being reasonable (step 3)</li>
+<li class="cnjnctn-col">The reimbursement is <strong>only</strong> for the use of your employee's vehicle for the <a href="#business" aria-controls="centred-popup" class="wb-lbx" role="button">business kilometres driven&nbsp;<span class="far fa-question-circle"></span>,</a> (in the course of their employment duties) (step 2)</li>
+<li class="cnjnctn-col">You received a copy of the <a href="#log" aria-controls="centred-popup" class="wb-lbx" role="button">required records&nbsp;<span class="far fa-question-circle"></span></a> to confirm the amounts reimbursed (step 3)</li>
+<li class="cnjnctn-col">You can justify your position regarding the amount you reimburse being reasonable</li>
 </ul>
 
 <h4>Taxable situation</h4>
@@ -738,6 +737,12 @@
 </dl>
 </div>
 </div>
+
+<section id="log" class="mfp-hide modal-dialog modal-content overlay-def"> <header class="modal-header"><h2 class="modal-title">Logbook - Required information</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="#ajax-log"></div>
+	</div></section>
+
 
 <section id="adminpolicy" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a CRA's administrative policy for the purpose of taxable benefits</h2>
 	</header>	<div class="modal-body">		
